Single Page Applications Part 2

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,8 +8,8 @@
   </div>
 
   <div fxFlex>
-    <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)">
+    <mat-grid-list cols="2" rowHeight="200px" class="cursor_pointer">
+      <mat-grid-tile *ngFor="let dish of dishes" [routerLink] = "['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
@@ -18,6 +18,6 @@
     </mat-grid-list>
   </div>
 
-  <app-dishdetail [dish] = "selectedDish"></app-dishdetail>
+
 
 </div>
