--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -67,4 +67,8 @@
       </mat-list-item>
     </mat-list>
   </div>
+  <div fxFlex [hidden]="leaders">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . . Please Wait!</h4>
+  </div>
 </div>
