--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,9 +7,9 @@
     </div>
   </div>
 
-  <div fxFlex>
+  <div fxFlex *ngIf="dishes">
     <mat-grid-list cols="2" rowHeight="200px" class="cursor_pointer">
-      <mat-grid-tile *ngFor="let dish of dishes" [routerLink] = "['/dishdetail', dish.id]">
+      <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
@@ -17,7 +17,9 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-
-
+  <div fxFlex [hidden]="dishes">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . . Please Wait!</h4>
+  </div>
 
 </div>
